--- a/app/views/17-0/reserve-reservations.html
+++ b/app/views/17-0/reserve-reservations.html
@@ -61,7 +61,7 @@
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
               <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                  {% if _account.entities.length > 1 %}
+                  {% if myData.entitycount > 1 %}
                   <th scope="col" class="govuk-table__header">Organisation</th>
                   {% endif %}
                   <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
@@ -73,7 +73,7 @@
               <tbody class="govuk-table__body">
               {% for _reservation in _reservations %}
                 {% set _entityLabel = "" %}
-                {% for _entity in _account.entities %}
+                {% for _entity in _account.entities2 %}
                   {% if _entity.id == _reservation.entity %}
                     {% set _entityLabel = _entity.name | upper %}
                   {% endif %}
@@ -92,7 +92,7 @@
                 {% endfor %}
                 
                   <tr class="govuk-table__row">
-                    {% if _account.entities.length > 1 %}
+                    {% if myData.entitycount > 1 %}
                     <td class="govuk-table__cell">
                       {{_entityLabel}}
                       {% if _reservation.status == "used" %}<br><strong>Apprentice added</strong>{% endif %}
@@ -100,7 +100,7 @@
                     {% endif %}
                     <td class="govuk-table__cell">
                       {{_courseLabel}}
-                      {% if _reservation.status == "used" and _account.entities.length == 1 %}<br><strong>Apprentice added</strong>{% endif %}
+                      {% if _reservation.status == "used" and myData.entitycount == 1 %}<br><strong>Apprentice added</strong>{% endif %}
                     </td>
                     <td class="govuk-table__cell" style="white-space: nowrap;">
                       {{_startDateLabel}}
