--- a/app/views/17-0/reserve-check-answers.html
+++ b/app/views/17-0/reserve-check-answers.html
@@ -54,7 +54,7 @@
                     Employer
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    {% for _entity in _account.entities2 %}
+                    {% for _entity in _account.employers %}
                         {% if myData.whichOrgAnswer == _entity.id %}
                             {{_entity.name|upper}}
                         {% endif %}
@@ -99,6 +99,7 @@
                     </a>
                 </dd>
             </div>
+            {% if myData.assignproviders == "true" %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Training provider
@@ -121,6 +122,7 @@
                     </a>
                 </dd>
             </div>
+            {% endif %}
         </dl>
 
         <form method="POST">
