--- a/app/views/17-0/reserve-confirmation.html
+++ b/app/views/17-0/reserve-confirmation.html
@@ -48,7 +48,7 @@
                     Employer
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    {% for _entity in _account.entities2 %}
+                    {% for _entity in _account.employers %}
                         {% if myData.whichOrgAnswer == _entity.id %}
                             {{_entity.name|upper}}
                         {% endif %}
@@ -91,6 +91,7 @@
                     {% endfor %}
                 </dd>
             </div>
+            {% if myData.assignproviders == "true" %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Training provider
@@ -104,6 +105,7 @@
                     {% endif %}
                 </dd>
             </div>
+            {% endif %}
         </dl>
 
         <h2 class="govuk-heading-l">Making changes</h2>
