--- a/app/views/17-0/reserve-reservations.html
+++ b/app/views/17-0/reserve-reservations.html
@@ -30,12 +30,10 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% block beforeContent %}
-{% if _reservationstotal > 0 %}
   {{ govukBackLink({
       text: "Back",
       href: "javascript: window.history.go(-1)"
   }) }}
-  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -43,20 +41,23 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        {% if _reservationstotal == 0 %}
-          {{ govukBackLink({
-              text: "Back",
-              href: "javascript: window.history.go(-1)"
-          }) }}
-        {% endif %}
-
-        <h1 class="govuk-heading-xl" style="margin-bottom: 90px">
+        <h1 class="govuk-heading-xl">
             Your funding reservations
         </h1>
 
         {% if _reservationstotal > 0 %}
-          <p class="govuk-heading-m"><a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}?type=emp">Reserve more funding</a></p>
+
+          {% if _reservationstotal >= myData.limit %}
+            <div class="govuk-inset-text">
+              <p class="govuk-heading">[You have reached the limit of the number of funding reservations you can make.]</p>
+            </div>
+          {% else %}
+            <p class="govuk-heading-m"><a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}?type=emp">Reserve more funding</a></p>
+          {% endif %}
+          
+          <!-- of {{myData.limit}} available  -->
           <p class="govuk-body">{{_reservationstotal}} {% if _reservationstotal == 1 %}reservation{% else %}reservations{% endif %}</p>
+          
           <table class="govuk-table">
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
               <thead class="govuk-table__head">
@@ -65,15 +66,21 @@
                   <th scope="col" class="govuk-table__header">Organisation</th>
                   {% endif %}
                   <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
-                  <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
-                  <th scope="col" class="govuk-table__header">Training provider</th>
-                  <th scope="col" class="govuk-table__header"></th>
+                  <th scope="col" class="govuk-table__header">Start date</th>
+                  {% if myData.assignproviders == "true" %}
+                    <th scope="col" class="govuk-table__header">Training provider</th>
+                    <th scope="col" class="govuk-table__header"></th>
+                  {% else %}
+                    <th scope="col" class="govuk-table__header">[Also visible to]</th>
+                    <th scope="col" class="govuk-table__header"></th>
+                    <th scope="col" class="govuk-table__header"></th>
+                  {% endif %}
                 </tr>
               </thead>
               <tbody class="govuk-table__body">
               {% for _reservation in _reservations %}
                 {% set _entityLabel = "" %}
-                {% for _entity in _account.entities2 %}
+                {% for _entity in _account.employers %}
                   {% if _entity.id == _reservation.entity %}
                     {% set _entityLabel = _entity.name | upper %}
                   {% endif %}
@@ -104,30 +111,69 @@
                     </td>
                     <td class="govuk-table__cell" style="white-space: nowrap;">
                       {{_startDateLabel}}
-                      {% if _reservation.status == "expired" %}<br><strong>Expired</strong>{% endif %}
-                    </td>
-                    <td class="govuk-table__cell" style="white-space: nowrap;" >
-                        {% if _reservation.provideractive %}
-                          {{_reservation.provider}}
-                        {% elif _reservation.status != "expired" or _reservation.status != "used" %}
-                          {% set _addProviderPage = "reserve-choose-provider-3-b" %}
-                          {% if myData.existingproviders == 0 %}
-                              {% set _addProviderPage = "reserve-enter-provider" %}        
-                          {% endif %}
-                          <!-- <a href="{{_addProviderPage}}?reservation={{_reservation.id}}" class="govuk-link govuk-link--no-visited-state">Assign</a> -->
-                        {% endif %}
-                    </td>
-                    <td class="govuk-table__cell" >
-                      {% if _reservation.status == "available" %}
-                      <a href="reserve-manage-reservation?reservation={{_reservation.id}}&type=emp" class="govuk-link govuk-link--no-visited-state">Manage</a>
-                      {% else %}
-                      &nbsp;
+                      {% if _reservation.status == "expired" %}
+                      <br><strong>Expired</strong>
+                      {% elif _reservation.expiresSoon %}
+                      <br><strong class="govuk-tag">Expires soon</strong>
                       {% endif %}
                     </td>
+
+                    <!-- Providers columns -->
+                    {% if myData.assignproviders == "true" %}
+                      <td class="govuk-table__cell" style="white-space: nowrap;" >
+                          {% if _reservation.provideractive %}
+                            {{_reservation.provider}}
+                          {% elif _reservation.status != "expired" or _reservation.status != "used" %}
+                            {% set _addProviderPage = "reserve-choose-provider-3-b" %}
+                            {% if myData.existingproviders == 0 %}
+                                {% set _addProviderPage = "reserve-enter-provider" %}        
+                            {% endif %}
+                            <!-- <a href="{{_addProviderPage}}?reservation={{_reservation.id}}" class="govuk-link govuk-link--no-visited-state">Assign</a> -->
+                          {% endif %}
+                      </td>
+                      <td class="govuk-table__cell" >
+                        {% if _reservation.status == "available" %}
+                        <a href="reserve-manage-reservation?reservation={{_reservation.id}}&type=emp" class="govuk-link govuk-link--no-visited-state">Manage</a>
+                        {% else %}
+                        &nbsp;
+                        {% endif %}
+                      </td>
+                    {% else %}
+                      <td class="govuk-table__cell"  style="white-space: nowrap;">
+                        {% if _reservation.createdby == "employer" %}
+                          <!-- <strong class="govuk-tag">[You]</strong><br> -->
+                          <strong>[Only {{_account.name}}]</strong>
+                        {% else %}
+                          [{{_reservation.createdby}}]
+                        {% endif %}
+                      </td>
+                      <td class="govuk-table__cell" >
+                        {% if _reservation.status == "available" %}
+                          {% if _reservation.createdby == "employer" %}
+                              <a href="#add" class="govuk-link govuk-link--no-visited-state">Add&nbsp;apprentice</a>
+                              <!-- <strong class="govuk-tag" style="margin-top:5px">[TODO]</strong> -->
+                          {% else %}
+                            <a href="#add" class="govuk-link govuk-link--no-visited-state">Add&nbsp;apprentice</a>
+                          {% endif %}
+                        {% else %}
+                          &nbsp;
+                        {% endif %}
+                      </td>
+                      <td class="govuk-table__cell" >
+                          {% if _reservation.status == "available" %}
+                          <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link govuk-link--no-visited-state">Delete</a>
+                          {% else %}
+                          &nbsp;
+                          {% endif %}
+                      </td>
+                    {% endif %}
+
                   </tr>
                 {% endfor %}
             </tbody>
           </table>
+
+          
         {% else %}
           <h2 class="govuk-heading-m ">There are no funding reservations to use</h2>
           <p class="govuk-body ">You need to reserve funding in order to add a new apprentice.</p>
