17-0 h1 moved inside legend

--- a/app/views/17-0/reserve-choose-course.html
+++ b/app/views/17-0/reserve-choose-course.html
@@ -50,7 +50,7 @@
 
 
             <div class="govuk-form-group {% if myData.validationErrors.knowCourseAnswer or myData.validationErrors.whichCourseAnswer %}govuk-form-group--error{% endif %}">
-              <fieldset class="govuk-fieldset" aria-describedby="courses-conditional-hint">
+              <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
                   <h1 class="govuk-fieldset__heading">
                     Do you know which apprenticeship training your apprentice will take?
