--- a/app/views/17-0/reserve-choose-start-date.html
+++ b/app/views/17-0/reserve-choose-start-date.html
@@ -41,14 +41,20 @@
         </div>
         {% endif %}
 
-        <h1 class="govuk-heading-xl">
+        <!-- <h1 class="govuk-heading-xl">
             When will the apprentice start their apprenticeship training?
-        </h1>
+        </h1> -->
 
         <form method="POST">
 
             <div class="govuk-form-group {% if myData.validationErrors.whichStartDateAnswer %}govuk-form-group--error{% endif %}">
                 <fieldset class="govuk-fieldset" aria-describedby="radio-hint">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                        <h1 class="govuk-fieldset__heading">
+                            When will the apprentice start their apprenticeship training?
+                        </h1>
+                    </legend>
+
                     <span id="radio-hint" class="govuk-hint">
                         The apprentice can start their apprenticeship training anytime in the month you choose, or the following 2 months.
                     </span>
